--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@glidejs/glide": "^3.4.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -10,9 +11,30 @@
     "@types/node": "^12.19.16",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "array-move": "^3.0.1",
+    "aws-sdk": "^2.843.0",
+    "axios": "^0.21.1",
+    "bcrypt": "^5.0.0",
+    "browser-image-compression": "^1.0.14",
+    "dotenv": "^8.2.0",
+    "draft-js": "^0.11.7",
+    "emailjs-com": "^2.6.4",
+    "froala-editor": "^3.2.6-1",
+    "html-to-text": "^7.0.0",
+    "pure-react-carousel": "^1.27.6",
+    "quill": "^1.3.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "^1.14.5",
+    "react-froala-wysiwyg": "^3.2.6-1",
+    "react-icons": "^4.2.0",
+    "react-quill": "^1.3.5",
+    "react-responsive-carousel": "^3.2.12",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-textarea-autosize": "^8.3.2",
+    "sass": "^1.32.7",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.1.4",
     "web-vitals": "^1.1.0"
   },
@@ -39,5 +61,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
+    "@types/glidejs__glide": "^3.4.0",
+    "@types/html-to-text": "^6.0.0",
+    "@types/quill": "^2.0.5",
+    "@types/react-draft-wysiwyg": "^1.13.1",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
